--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
     <title>Kareem Wilson</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -57,7 +58,7 @@
                 <li class="tech">Javascript</li>
                 <li class="tech">html</li>
               </ul>
-              <button class="btn">See Project</button>
+              <button type="button" class="btn">See Project</button>
             </div>
           </div>
           <div class="projectCard">
@@ -70,7 +71,7 @@
                 <li class="tech">Javascript</li>
                 <li class="tech">html</li>
               </ul>
-              <button class="btn">See Project</button>
+              <button type="button" class="btn">See Project</button>
             </div>
           </div>
           <div class="projectCard">
@@ -83,7 +84,7 @@
                 <li class="tech">Javascript</li>
                 <li class="tech">html</li>
               </ul>
-              <button class="btn">See Project</button>
+              <button type="button" class="btn">See Project</button>
             </div>
           </div>
           <div class="projectCard">
@@ -96,7 +97,7 @@
                 <li class="tech">Javascript</li>
                 <li class="tech">html</li>
               </ul>
-              <button class="btn">See Project</button>
+              <button type="button" class="btn">See Project</button>
             </div>
           </div>
           <div class="projectCard">
@@ -109,7 +110,7 @@
                 <li class="tech">Javascript</li>
                 <li class="tech">html</li>
               </ul>
-              <button class="btn">See Project</button>
+              <button type="button" class="btn">See Project</button>
             </div>
           </div>
           <div class="projectCard">
@@ -122,7 +123,7 @@
                 <li class="tech">Javascript</li>
                 <li class="tech">html</li>
               </ul>
-              <button class="btn">See Project</button>
+              <button type="button" class="btn">See Project</button>
             </div>
           </div>
         </div>
@@ -137,7 +138,7 @@
                 some of my work and experience! If you like what you see and
                 have a project you need coded, don't hestiate to contact me.
               </p>
-              <button class="resumeBtn">Get My Reusme</button>
+              <button type="button" class="resumeBtn">Get My Reusme</button>
             </div>
             <div class="technologyCard">
               <img
@@ -198,6 +199,7 @@
                 >Full Name</label
               >
               <input
+                id="full-name"
                 class="full-name"
                 placeholder="Full Name"
                 type="text"
@@ -210,6 +212,7 @@
                 >Email address</label
               >
               <input
+                id="email"
                 class="email"
                 placeholder="Email address"
                 type="email"
@@ -222,7 +225,7 @@
                 class="message-input"
                 maxlength="500"
                 name="message"
-                id="msg"
+                id="message"
                 required
               >
 Enter text here</textarea
