--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
       <div class="bg">
         <header class="header">
           <p class="logo">Welcome</p>
-          <ul class="nav-list">
+          <ul class="nav-list nav-mobile">
             <li class="nav-item close-menu"><a href="#works">Portofolio</a></li>
             <li class="nav-item close-menu"><a href="#About">About</a></li>
             <li class="nav-item close-menu"><a href="#Contact">Contact</a></li>
+          </ul>
+          <ul class="nav-list nav-desktop">
+            <li class="nav-item "><a href="#works">Portofolio</a></li>
+            <li class="nav-item "><a href="#About">About</a></li>
+            <li class="nav-item "><a href="#Contact">Contact</a></li>
           </ul>
           <nav class="fa fa-bars openMenu"></nav>
           <i class="fa fa-close close-menu invisible"></i>
